# internal/dto/error.go
@@ -1,0 +1,7 @@
+package dto
+
+// ErrorResponse представляет стандартный ответ с ошибкой
+// @Description Стандартный ответ при ошибке
+type ErrorResponse struct {
+	Error string `json:"error" example:"Описание ошибки"`
+}
